# careless-whisper-python

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.deploy/docker/: docker-compose.yml
.deploy/docker/grafana/provisioning/dashboards/: careless-whisper.json  dashboards.yml
.deploy/docker/prometheus/: prometheus.yml
carelesswhisper/: __init__.py  args.py  context.py  exploit.py  fingerprint.py  main.py  metrics.py
carelesswhisper/exporters/: base.py  csv.py  prometheus.py
carelesswhisper/messengers/: base.py  whatsapp.py
carelesswhisper/tools/: util.py
carelesswhisper/tools/cli/: main.py  ui.py
carelesswhisper/tools/dos/: README.md  main.py
carelesswhisper/tools/fingerprint/: README.md  config.py  main.py
docker/: docker-compose.yml
docker/grafana/provisioning/dashboards/: careless-whisper.json
